NModificacion para Jazmin

--- a/app/views/avatars/index.html.erb
+++ b/app/views/avatars/index.html.erb
@@ -1,8 +1,10 @@
-<h1>Elije el avatar del pajero TORNISH</h1>
+<h1>Un Mensaje para Jazmin</h1>
 <div>
     <%= image_tag '01.jpg' %> 
   </div> 
-  <h1>Pagale a las minas</h1>
+  <h1>Y unos avatar para alegrar la vida!!!</h1>
+  <h3>Elige un avatar que te represente </h3>
+  <h3>Elige uno que me represente a mí :)</h3>
 <% @avatars.each do |a| %>
     <%= image_tag "#{a.url_image}" %>
 <% end%>
